fix: prevent board from clipping into sidebar on board page

--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ img {
     height: 100%;
     width: 15rem;
     grid-area: sidebar;
+    background-color: var(--BG-COLOR);
   }
 
   .user-info {
